--- a/first.css
+++ b/first.css
@@ -2,10 +2,12 @@ body {
   overflow: hidden;
   height: 100vh;
 }
+
 * {
   margin: 0;
   padding: 0;
 }
+
 ul {
   list-style: none;
 }
@@ -17,21 +19,25 @@ li {
   display: flex;
   justify-content: center;
 }
+
 li:hover {
   background-color: white;
   color: #3452eb;
   cursor: pointer;
 }
+
 #navbar {
   width: 300px;
   height: 100vh;
   background-color: #3452eb;
   padding-top: 20px;
 }
+
 .img-icon {
   width: 100%;
   border-radius: 5px;
 }
+
 .icon {
   display: flex;
   justify-content: flex-end;
@@ -40,6 +46,7 @@ li:hover {
   right: 15px;
   cursor: pointer;
 }
+
 #close-navbar {
   width: 0px;
   height: 100vh;
@@ -48,11 +55,63 @@ li:hover {
   display: flex;
   justify-content: center;
 }
+
 #hide-icon {
   display: none;
   cursor: pointer;
   color: white;
 }
+
 .myimage {
   height: 100vh;
+}
+
+#mobile-close-navbar {
+  display: none;
+  background-color: #3452eb;
+}
+
+.container {
+  display: flex;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .icon {
+    display: none;
+  }
+  #menulist {
+    display: none;
+  }
+  #mobile-close-navbar {
+    display: flex;
+    justify-content: flex-end;
+    height: 60px;
+    padding-right: 30px;
+    align-items: center;
+  }
+  #mobile-hide-open-icon {
+    display: block;
+  }
+  #mobile-hide-close-icon {
+    display: none;
+  }
+  #navbar {
+    width: 100% !important;
+    height: 0px;
+  }
+  body {
+    overflow: auto;
+    background-color: grey;
+  }
+  #close-navbar {
+    display: none;
+  }
+  .myimage {
+    width: 100%;
+    height: auto;
+  }
 }
